--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,7 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 
+# Node/Ionic
+node_modules/
+platforms/
+plugins/
