--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "description": "listfy: An Ionic project",
   "dependencies": {
+    "bower": "^1.4.1",
     "gulp": "^3.5.6",
-    "gulp-sass": "^1.3.3",
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
-    "gulp-rename": "^1.2.0"
+    "gulp-rename": "^1.2.0",
+    "gulp-sass": "^1.3.3"
   },
   "devDependencies": {
     "bower": "^1.3.3",
@@ -19,5 +20,19 @@
     "org.apache.cordova.console",
     "com.ionic.keyboard"
   ],
-  "cordovaPlatforms": []
+  "cordovaPlatforms": [],
+  "main": "gulpfile.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Ridermansb/listfy.git"
+  },
+  "author": "ridermansb",
+  "license": "GPL v3",
+  "bugs": {
+    "url": "https://github.com/Ridermansb/listfy/issues"
+  },
+  "homepage": "https://github.com/Ridermansb/listfy"
 }
