--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,8 @@
 {
   "name": "listfy",
   "devDependencies": {
-    "ionic": "driftyco/ionic-bower#1.0.0"
+    "ionic": "driftyco/ionic-bower#1.0.0",
+    "angular-mocks": "~1.4.1"
   },
   "version": "0.0.0",
   "homepage": "https://github.com/Ridermansb/listfy",
@@ -12,12 +13,11 @@
   "ignore": [
     "**/.*",
     "node_modules",
-    "bower_components",
     "www/lib",
-    "test",
+    "www/lib",
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.4.0"
+    "angular": "~1.4.1"
   }
 }
