--- a/package.json
+++ b/package.json
@@ -13,14 +13,27 @@
   "devDependencies": {
     "bower": "^1.3.3",
     "gulp-util": "^2.2.14",
-    "shelljs": "^0.3.0"
+    "shelljs": "^0.3.0",
+    "karma": "~0.12.36",
+    "karma-chai": "~0.1.0",
+    "mocha": "~2.2.5",
+    "karma-mocha": "~0.1.10",
+    "phantomjs": "~1.9.17",
+    "karma-phantomjs-launcher": "~0.2.0",
+    "karma-coverage": "~0.4.2",
+    "chai": "~3.0.0"
   },
   "cordovaPlugins": [
     "org.apache.cordova.device",
     "org.apache.cordova.console",
     "com.ionic.keyboard"
   ],
-  "cordovaPlatforms": [],
+  "cordovaPlatforms": [
+    {
+      "platform": "android",
+      "locator": "browser"
+    }
+  ],
   "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
