--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,9 @@
   "name": "listfy",
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.0.0",
-    "angular-mocks": "~1.4.1"
+    "angular-mocks": "~1.4.1",
+    "ngCordova": "~0.1.17-alpha",
+    "ionic-service-core": "~0.1.7"
   },
   "version": "0.0.0",
   "homepage": "https://github.com/Ridermansb/listfy",
