--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
     "version": "0.0.2",
     "description": "listfy: An Ionic project",
     "dependencies": {
-        "bower": "^1.4.1",
         "gulp": "^3.5.6",
         "gulp-concat": "^2.2.0",
         "gulp-minify-css": "^0.3.0",
@@ -38,7 +37,8 @@
     ],
     "main": "gulpfile.js",
     "scripts": {
-        "test": "./node_modules/karma/bin/karma start --single-run"
+        "test": "./node_modules/karma/bin/karma start --single-run",
+        "start": "npm install; bower install;"
     },
     "repository": {
         "type": "git",
