--- a/package.json
+++ b/package.json
@@ -12,17 +12,19 @@
     },
     "devDependencies": {
         "bower": "^1.3.3",
+        "chai": "~3.0.0",
+        "codeclimate-test-reporter": "0.0.4",
         "gulp-util": "^2.2.14",
-        "shelljs": "^0.3.0",
         "karma": "~0.12.36",
         "karma-chai": "~0.1.0",
-        "mocha": "~2.2.5",
-        "karma-mocha": "~0.1.10",
-        "phantomjs": "~1.9.17",
-        "karma-phantomjs-launcher": "~0.2.0",
         "karma-coverage": "~0.4.2",
-        "chai": "~3.0.0",
-        "codeclimate-test-reporter": "0.0.4"
+        "karma-mocha": "~0.1.10",
+        "karma-phantomjs-launcher": "~0.2.0",
+        "karma-sinon-chai": "^1.0.0",
+        "mocha": "~2.2.5",
+        "phantomjs": "~1.9.17",
+        "shelljs": "^0.3.0",
+        "sinon": "^1.15.3"
     },
     "cordovaPlugins": [
         "org.apache.cordova.device",
