--- a/package.json
+++ b/package.json
@@ -1,55 +1,57 @@
 {
-    "name": "listfy",
-    "version": "0.0.2",
-    "description": "listfy: An Ionic project",
-    "dependencies": {
-        "gulp": "^3.5.6",
-        "gulp-concat": "^2.2.0",
-        "gulp-minify-css": "^0.3.0",
-        "gulp-rename": "^1.2.0",
-        "gulp-sass": "^1.3.3",
-        "express": "~4.13.0"
-    },
-    "devDependencies": {
-        "bower": "^1.3.3",
-        "chai": "~3.0.0",
-        "codeclimate-test-reporter": "0.0.4",
-        "gulp-util": "^2.2.14",
-        "karma": "~0.12.36",
-        "karma-chai": "~0.1.0",
-        "karma-coverage": "~0.4.2",
-        "karma-mocha": "~0.1.10",
-        "karma-phantomjs-launcher": "~0.2.0",
-        "karma-sinon-chai": "^1.0.0",
-        "mocha": "~2.2.5",
-        "phantomjs": "~1.9.17",
-        "shelljs": "^0.3.0",
-        "sinon": "^1.15.3"
-    },
-    "cordovaPlugins": [
-        "org.apache.cordova.device",
-        "org.apache.cordova.console",
-        "com.ionic.keyboard"
-    ],
-    "cordovaPlatforms": [
-        {
-            "platform": "android",
-            "locator": "browser"
-        }
-    ],
-    "main": "gulpfile.js",
-    "scripts": {
-        "test": "./node_modules/karma/bin/karma start --single-run",
-        "start": "npm install; bower install;"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/Ridermansb/listfy.git"
-    },
-    "author": "ridermansb",
-    "license": "GPL v3",
-    "bugs": {
-        "url": "https://github.com/Ridermansb/listfy/issues"
-    },
-    "homepage": "https://github.com/Ridermansb/listfy"
+  "name": "listfy",
+  "version": "0.0.2",
+  "description": "listfy: An Ionic project",
+  "dependencies": {
+    "express": "~4.13.0",
+    "gulp": "^3.5.6",
+    "gulp-concat": "^2.2.0",
+    "gulp-minify-css": "^0.3.0",
+    "gulp-rename": "^1.2.0",
+    "gulp-sass": "^1.3.3"
+  },
+  "devDependencies": {
+    "bower": "^1.3.3",
+    "chai": "~3.0.0",
+    "chai-things": "^0.2.0",
+    "codeclimate-test-reporter": "0.0.4",
+    "gulp-util": "^2.2.14",
+    "karma": "~0.12.36",
+    "karma-chai": "~0.1.0",
+    "karma-chai-things": "^0.1.4",
+    "karma-coverage": "~0.4.2",
+    "karma-mocha": "~0.1.10",
+    "karma-phantomjs-launcher": "~0.2.0",
+    "karma-sinon-chai": "^1.0.0",
+    "mocha": "~2.2.5",
+    "phantomjs": "~1.9.17",
+    "shelljs": "^0.3.0",
+    "sinon": "^1.15.3"
+  },
+  "cordovaPlugins": [
+    "org.apache.cordova.device",
+    "org.apache.cordova.console",
+    "com.ionic.keyboard"
+  ],
+  "cordovaPlatforms": [
+    {
+      "platform": "android",
+      "locator": "browser"
+    }
+  ],
+  "main": "gulpfile.js",
+  "scripts": {
+    "test": "./node_modules/karma/bin/karma start --single-run",
+    "start": "npm install; bower install;"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Ridermansb/listfy.git"
+  },
+  "author": "ridermansb",
+  "license": "GPL v3",
+  "bugs": {
+    "url": "https://github.com/Ridermansb/listfy/issues"
+  },
+  "homepage": "https://github.com/Ridermansb/listfy"
 }
