--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "main": "gulpfile.js",
     "scripts": {
         "test": "./node_modules/karma/bin/karma start --single-run",
-        "start": "npm install; bower install;"
+        "postinstall": "bower install"
     },
     "repository": {
         "type": "git",
