Add node version into package (need for heroku)

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
     "name": "listfy",
     "version": "0.0.3",
+    "engines": {
+        "node": "0.12.x"
+    },
     "description": "listfy: An Ionic project",
     "dependencies": {
         "express": "~4.13.0",
