--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "main": "gulpfile.js",
     "scripts": {
         "test": "./node_modules/karma/bin/karma start --single-run",
-        "postinstall": "./node_modules/bower/bin/bower install"
+        "postinstall": "bower install"
     },
     "repository": {
         "type": "git",
