Add android platform and remove readme.md (show in browser)

--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
         {
             "platform": "android",
             "locator": "browser"
-        }
+        },
+        "android"
     ],
     "main": "gulpfile.js",
     "scripts": {
